# seq-input-gelf

./: .gitignore  Cargo.toml  README.md  Seq.Input.Gelf.nuspec  appveyor.yml  build.ps1  build.sh  docker-compose.yml  docker-publish.ps1  docker-publish.sh  rust-toolchain  rustfmt.toml  seq-input-gelf.d.json  test.sh
.cargo/: config
ci/: Dockerfile  build-deps.ps1  build.ps1  cross-build.ps1  local-build.sh  setup.ps1
ci/linux-x64/: build.ps1  setup.sh
ci/native/: corss-build.ps1  local-build.sh
ci/smoke-test/: .gitignore  README.md  check.ps1  docker-compose.yml
ci/smoke-test/app/: Dockerfile  run.sh
ci/win-x64/: build.ps1  setup.ps1
dockerfiles/: Dockerfile  aarch64-unknown-linux-gnu.Dockerfile  aarch64-unknown-linux-musl.Dockerfile  run.sh  x86_64-unknown-linux-gnu.Dockerfile  x86_64-unknown-linux-musl.Dockerfile
examples/go/go-gelf/: .gitignore
examples/go/go-gelf/main/: go.mod  go.sum  main.go
examples/java/log4j-gelf/: build.gradle  settings.gradle
examples/java/log4j-gelf/gradle/wrapper/: gradle-wrapper.properties
examples/java/log4j-gelf/src/main/java/log4j/gelf/: App.java
examples/java/log4j-gelf/src/main/resources/: log4j2.xml
examples/python/: pygelf-example.py  pygelf.py
smoke-test/: README.md  build.sh  check.sh
smoke-test/app/: Dockerfile
sqelf/: Cargo.toml
sqelf/src/: config.rs  diagnostics.rs  error.rs  io.rs  lib.rs  main.rs  process.rs  receive.rs  server.rs
sqelf/src/process/: clef.rs  gelf.rs  mod.rs  str.rs
sqelf/src/server/: mod.rs  tcp.rs  udp.rs
tests/: Cargo.toml
tests/app/: Dockerfile  run.sh
tests/seq/: docker-compose.yml  up.sh
tests/src/: main.rs  support.rs
tests/src/cases/: empty.rs  mod.rs  simple.rs  tcp_chunked_simple.rs  tcp_empty.rs  tcp_huge.rs  tcp_invalid.rs  tcp_multiple_conns.rs  tcp_multiple_conns_partial.rs  tcp_multiple_frames.rs  tcp_multiple_frames_single_write.rs  tcp_overflow.rs  tcp_overflow_huge.rs  tcp_partial.rs  tcp_simple.rs  tcp_timeout_partial.rs  tcp_timeout_slow.rs  tcp_tls.rs  udp_chunked_out_of_order.rs  udp_chunked_overflow.rs  udp_chunked_overflow_invalid_header.rs  udp_chunked_simple.rs  udp_empty.rs  udp_invalid.rs  udp_simple.rs
tests/src/support/: mod.rs  server.rs  tcp.rs  udp.rs
