[package]
name = "sqelf"
version = "0.0.0"
authors = ["Datalust"]
edition = "2018"
license = "Apache-2.0"

[dependencies.futures]
version = "0.3.0"

[dependencies.pin-utils]
version = "0.1.0-alpha.4"

[dependencies.tokio]
version = "0.2.0"
features = ["signal", "sync", "net", "time", "stream"]

[dependencies.tokio-util]
version = "0.2.0"
features = ["codec", "udp"]

[dependencies.bytes]
version = "0.5"

[dependencies.libflate]
version = "0.1"

[dependencies.byteorder]
version = "1.0"

[dependencies.humantime]
version = "1"

[dependencies.string_cache]
version = "0.7"

[dependencies.inlinable_string]
version = "0.1"

[dependencies.serde]
version = "1"

[dependencies.serde_derive]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.lazy_static]
version = "1"

[dependencies.anyhow]
version = "1"
