[package]
name = "sqelf"
version = "0.0.0"
authors = ["Datalust"]
edition = "2018"
license = "Apache-2.0"

[features]
default = ["tls"]
tls = ["tokio-rustls", "rustls-pemfile"]

[dependencies.futures]
version = "0.3.0"

[dependencies.pin-utils]
version = "0.1.0-alpha.4"

[dependencies.tokio]
version = "1.18"
features = ["signal", "sync", "net", "time", "rt", "rt-multi-thread"]

[dependencies.tokio-util]
version = "0.6.0"
features = ["net", "codec"]

[dependencies.tokio-rustls]
version = "0.23"
optional = true

[dependencies.rustls-pemfile]
version = "1"
optional = true

[dependencies.bytes]
version = "1.0"

[dependencies.libflate]
version = "0.1"

[dependencies.byteorder]
version = "1.0"

[dependencies.humantime]
version = "1"

[dependencies.string_cache]
version = "0.7"

[dependencies.inlinable_string]
version = "0.1"

[dependencies.serde]
version = "1"

[dependencies.serde_derive]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.lazy_static]
version = "1"

[dependencies.anyhow]
version = "1"

[dependencies.rust_decimal]
version = "1.14"
