[package]
name = "sqelf"
version = "0.0.0"
authors = ["Datalust"]
edition = "2018"
license = "Apache-2.0"

[features]
default = ["tls"]
tls = ["tokio-rustls", "rustls-pemfile"]

[dependencies.futures]
version = "0.3"

[dependencies.pin-utils]
version = "0.1"

[dependencies.tokio]
version = "1.39"
features = ["signal", "sync", "net", "time", "rt", "rt-multi-thread"]

[dependencies.tokio-util]
version = "0.7"
features = ["net", "codec"]

[dependencies.tokio-rustls]
version = "0.26"
default-features = false
optional = true

[dependencies.rustls]
version = "0.23"
default-features = false
features = ["ring", "std", "tls12"]

[dependencies.rustls-pemfile]
version = "2"
default-features = false
features = ["std"]
optional = true

[dependencies.rustls-pki-types]
version = "1.8"

[dependencies.bytes]
version = "1"

[dependencies.libflate]
version = "2"

[dependencies.byteorder]
version = "1"

[dependencies.humantime]
version = "1"

[dependencies.string_cache]
version = "0.8"

[dependencies.inlinable_string]
version = "0.1"

[dependencies.serde]
version = "1"

[dependencies.serde_derive]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.lazy_static]
version = "1"

[dependencies.anyhow]
version = "1"

[dependencies.rust_decimal]
version = "1.35"
