[package]
name = "sqelf_tests"
version = "0.0.0"
authors = ["Datalust"]
edition = "2018"
license = "Apache-2.0"
publish = false

[dependencies.sqelf]
path = "../sqelf"

[dependencies.byteorder]
version = "1.0"

[dependencies.tokio]
version = "1.8"

[dependencies.crossbeam-channel]
version = "0.5"

[dependencies.serde_json]
version = "1.0"

[dependencies.rustls]
version = "0.20"

[dependencies.rustls-native-certs]
version = "0.6"
